objects/Trigger__c.object
<CustomObject>
    <description>It consists of all the triggers.</description>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>What is changed in the trigger.</description>
        <label>Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the trigger.</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the trigger.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_To_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object on which trigger works.</description>
        <label>Related To Object</label>
        <referenceTo>Object__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Triggers</relationshipLabel>
        <relationshipName>Triggers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <description>Events when trigger fires.</description>
        <label>Trigger Type</label>
        <picklist>
            <picklistValues>
                <fullName>Before Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After Undelete</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Trigger</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>